--- a/src/styles/abstracts/_abstracts.scss
+++ b/src/styles/abstracts/_abstracts.scss
@@ -2,4 +2,6 @@
 
 @import "@/styles/abstracts/mixins/mixins";
 
+@import "@/styles/abstracts/mixins/functions";
+
 @import "@/styles/abstracts/variables/colours";
